// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controlled version should render collapsed version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiPaper-rounded MuiExpansionPanel-root MuiExpansionPanel-rounded"
    >
      <div
        aria-hidden="true"
        class="MuiCollapse-container"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiExpansionPanelDetails-root ExpansionPanelDetails-root Accordion-details"
            >
              <div>
                Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`controlled version should render expanded version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiPaper-rounded MuiExpansionPanel-root MuiExpansionPanel-expanded Accordion-expanded MuiExpansionPanel-rounded"
    >
      <div
        class="MuiCollapse-container MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiExpansionPanelDetails-root ExpansionPanelDetails-root Accordion-details"
            >
              <div>
                Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`default version for sections should render default version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiPaper-rounded MuiExpansionPanel-root Accordion-root Accordion-bordered MuiExpansionPanel-rounded"
    >
      <div
        aria-expanded="false"
        class="MuiButtonBase-root MuiExpansionPanelSummary-root WithStyles-ExpansionPanelSummary--root Accordion-summary"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiExpansionPanelSummary-content WithStyles-ExpansionPanelSummary--content Accordion-content"
        >
          <div>
            Fryderyk Chopin
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon"
          role="button"
          tabindex="-1"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              class="SvgArrowDownMinor16-root Accordion-expandIcon"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <defs>
                <path
                  d="M6.793 9.5l-4-4 .707-.707 4 4 4-4 .707.707L7.5 10.207 6.793 9.5z"
                  id="arrowDownMinor16_svg__a"
                />
              </defs>
              <g
                fill-rule="evenodd"
              >
                <mask
                  id="arrowDownMinor16_svg__b"
                >
                  <use
                    xlink:href="#arrowDownMinor16_svg__a"
                  />
                </mask>
                <use
                  fill-rule="nonzero"
                  xlink:href="#arrowDownMinor16_svg__a"
                />
                <g
                  mask="url(#arrowDownMinor16_svg__b)"
                >
                  <path
                    d="M0 0h16v16H0z"
                  />
                </g>
              </g>
            </svg>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="MuiCollapse-container"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiExpansionPanelDetails-root ExpansionPanelDetails-root Accordion-details"
            >
              <div>
                Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`default version for sections should render expanded version after click on summary 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation0 MuiPaper-rounded MuiExpansionPanel-root Accordion-root Accordion-bordered MuiExpansionPanel-expanded Accordion-expanded MuiExpansionPanel-rounded"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiExpansionPanelSummary-root WithStyles-ExpansionPanelSummary--root Accordion-summary MuiExpansionPanelSummary-expanded"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiExpansionPanelSummary-content WithStyles-ExpansionPanelSummary--content Accordion-content MuiExpansionPanelSummary-expanded"
        >
          <div>
            Fryderyk Chopin
          </div>
        </div>
        <div
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiExpansionPanelSummary-expanded"
          role="button"
          tabindex="-1"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              class="SvgArrowDownMinor16-root Accordion-expandIcon"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <defs>
                <path
                  d="M6.793 9.5l-4-4 .707-.707 4 4 4-4 .707.707L7.5 10.207 6.793 9.5z"
                  id="arrowDownMinor16_svg__a"
                />
              </defs>
              <g
                fill-rule="evenodd"
              >
                <mask
                  id="arrowDownMinor16_svg__b"
                >
                  <use
                    xlink:href="#arrowDownMinor16_svg__a"
                  />
                </mask>
                <use
                  fill-rule="nonzero"
                  xlink:href="#arrowDownMinor16_svg__a"
                />
                <g
                  mask="url(#arrowDownMinor16_svg__b)"
                >
                  <path
                    d="M0 0h16v16H0z"
                  />
                </g>
              </g>
            </svg>
          </span>
        </div>
      </div>
      <div
        class="MuiCollapse-container"
        style="min-height: 0px; height: 0px; transition-duration: 0ms;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              class="MuiExpansionPanelDetails-root ExpansionPanelDetails-root Accordion-details"
            >
              <div>
                Fryderyk Chopin was born in Żelazowa Wola, 46 kilometres west of Warsaw, in what was then the Duchy of Warsaw, a Polish state established by Napoleon. The parish baptismal record gives his birthday as 22 February 1810, and cites his given names in the Latin form Fridericus Franciscus (in Polish, he was Fryderyk Franciszek). However, the composer and his family used the birthdate 1 March, which is now generally accepted as the correct date.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
